--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import bgCafe from "../assets/img/bg-cafe.jpg";
 <header class="h-44">
   <img
     src={bgCafe.src}
-    class="h-full object-cover"
+    class="h-full object-cover w-full"
     alt="background cafe header"
   />
 </header>
