--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,9 @@ import Header from "../components/Header.astro";
 import Section from "../components/Section.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Simple coffe">
   <main class="min-h-screen bg-background text-text">
     <Header />
     <Section />
-    <h1>Hello world</h1>
   </main>
 </Layout>
