--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,63 @@
 ---
+import star from "../assets/img/Star.svg";
+import starFill from "../assets/img/Star_fill.svg";
 interface Props {
-	title: string;
-	body: string;
-	href: string;
+  name: string;
+  image: any;
+  rating: number;
+  price: string;
+  popular: boolean;
+  available: boolean;
+  votes: number;
 }
 
-const { href, title, body } = Astro.props;
+const { image, name, popular, rating, price, available, votes } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
+<li class="relative">
+  <img
+    src={image}
+    alt="name"
+    class="w-full rounded-3xl"
+  />
+
+  {
+    popular && (
+      <span class="bg-popular absolute top-3 left-4 rounded-2xl py-1 px-2 text-background text-[0.625rem]">
+        Popular
+      </span>
+    )
+  }
+  <div class="my-5 flex justify-between">
+    <h2 class="text-lg font-bold">{name}</h2>
+    <span class="text-background bg-price px-1 rounded-md font-bold"
+      >{price}</span
+    >
+  </div>
+
+  {
+    rating ? (
+      <div class="flex justify-between">
+        <div class="flex gap-2">
+          <p class="flex gap-1 items-center">
+            <img
+              src={starFill.src}
+              alt="starFill"
+            />
+            <span>{rating}</span>
+          </p>
+          <span class="text-active">({votes} votes)</span>{" "}
+        </div>
+        {!available && <span class="text-red-400 font-bold">Sold out</span>}
+      </div>
+    ) : (
+      <p class="text-active flex gap-2 items-center">
+        <img
+          src={star.src}
+          alt="star"
+        />
+        <span class="block font-bold">No ratings</span>
+      </p>
+    )
+  }
 </li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
